--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="col-lg-10 mx-auto text-center">
                     <h2 class="section-title waste-title">
                         <span class="text-danger display-4 fw-bold">CRISIS:</span><br>
-                        The €900 Billion Agricultural Catastrophe
+                        The $370 Million Agricultural Catastrophe
                     </h2>
                     <p class="section-subtitle fs-4 text-muted">Every second, we're hemorrhaging potential - turning abundance into waste</p>
                 </div>
@@ -135,8 +135,8 @@
                         <div class="row text-center">
                             <div class="col-md-4 mb-3">
                                 <div class="counter-item">
-                                    <div class="counter-number text-danger" data-count="900">0</div>
-                                    <div class="counter-label">Billion € Lost Annually</div>
+                                    <div class="counter-number text-danger" data-count="370">0</div>
+                                    <div class="counter-label">Million € Lost Annually</div>
                                     <div class="counter-visual">
                                         <div class="money-drain"></div>
                                     </div>
@@ -172,7 +172,7 @@
                             <i class="fas fa-exclamation-triangle"></i>
                         </div>
                         <h4 class="text-danger">Financial Hemorrhage</h4>
-                        <p>Reactive farming decisions cost the global economy nearly €900 billion annually - that's €28,000 lost every single second</p>
+                        <p>Reactive farming decisions cost the global economy nearly €370 million annually - that's €43k lost every single day</p>
                         <div class="impact-meter">
                             <div class="impact-bar danger-bar"></div>
                         </div>
@@ -217,8 +217,8 @@
                             <div class="row text-center">
                                 <div class="col-md-3">
                                     <div class="urgency-stat">
-                                        <div class="stat-number">€28K</div>
-                                        <div class="stat-label">Lost per second globally</div>
+                                        <div class="stat-number">€43K</div>
+                                        <div class="stat-label">Lost per day globally</div>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
@@ -730,15 +730,15 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <h6>Contact Information</h6>
-                    <p><i class="fas fa-envelope me-2"></i>hello@seca.agriculture</p>
-                    <p><i class="fas fa-phone me-2"></i>+351 XXX XXX XXX</p>
+                    <p><i class="fas fa-envelope me-2"></i>seca.eitt.ist@gmail.com</p>
+                    <p><i class="fas fa-phone me-2"></i>+351 935 378 741</p>
                     <p><i class="fas fa-map-marker-alt me-2"></i>Portugal</p>
                 </div>
             </div>
             <hr class="my-4">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p>&copy; 2024 SECA. All rights reserved. | <a href="#" class="text-light">Privacy Policy</a> | <a href="#" class="text-light">Terms of Service</a></p>
+                    <p>&copy; 2025 SECA. All rights reserved. | <a href="#" class="text-light">Privacy Policy</a> | <a href="#" class="text-light">Terms of Service</a></p>
                 </div>
             </div>
         </div>
