--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         </div>
     </section>
 -->
-    <!-- Pricing Section -->
+    <!-- Pricing Section 
     <section id="pricing" class="py-5 " style="background-color: #F0FDF4 ; >
         <div class="container">
             <div class="row">
@@ -629,7 +629,7 @@
             </div>
         </div>
     </section>
-
+-->
     <!-- Contact Section -->
     <section id="contact" class="py-5">
         <div class="container">
@@ -677,6 +677,7 @@
                                 <option value="500+">500+ hectares</option>
                             </select>
                         </div>
+                        <!--
                         <div class="mb-3">
                             <label for="plan" class="form-label">Interested Plan</label>
                             <select class="form-control" id="plan">
@@ -686,6 +687,7 @@
                                 <option value="custom">Custom Solution</option>
                             </select>
                         </div>
+                    -->
                         <div class="mb-3">
                             <label for="message" class="form-label">Message</label>
                             <textarea class="form-control" id="message" rows="4" placeholder="Tell us about your farming operation and specific needs..."></textarea>
