--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#blog">Blog</a>
                     </li> -->
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="#pricing">Pricing</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
@@ -101,7 +101,7 @@
                         </div>
                         <div class="hero-buttons">
                             <a href="#solution" class="btn btn-primary btn-lg me-3">Learn More</a>
-                            <a href="#pricing" class="btn btn-outline-primary btn-lg">View Pricing</a>
+                            <!--<a href="#pricing" class="btn btn-outline-primary btn-lg">View Pricing</a>-->
                         </div>
                     </div>
                 </div>
@@ -719,7 +719,7 @@
                     <ul class="list-unstyled">
                         <li><a href="#solution" class="text-light">Technology</a></li>
                         <li><a href="#features" class="text-light">Features</a></li>
-                        <li><a href="#pricing" class="text-light">Pricing</a></li>
+                        <!--<li><a href="#pricing" class="text-light">Pricing</a></li>-->
                     </ul>
                 </div>
                 <div class="col-lg-2 mb-4">
