--- a/index.html
+++ b/index.html
@@ -725,8 +725,8 @@
                 <div class="col-lg-2 mb-4">
                     <h6>Company</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-light">About</a></li>
-                        <li><a href="#" class="text-light">Careers</a></li>
+                        <!--<li><a href="#" class="text-light">About</a></li>-->
+                        <!--<li><a href="#" class="text-light">Careers</a></li>-->
                         <li><a href="#contact" class="text-light">Contact</a></li>
                     </ul>
                 </div>
